--- a/.env.stage
+++ b/.env.stage
@@ -1,5 +1,5 @@
 BASE_URL=https://qauto.forstudy.space/
-USER_NAME=standard_user
-USER_PASS=secret_sauce
+USER_NAME=guest
+USER_PASS=welcome2qauto
 
 
